--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,18 +22,48 @@
         </activity>
         <activity
             android:name=".LoginActivity"
-            android:theme="@style/AppTheme.Dark" />
+             />
         <activity
             android:name=".SignupActivity"
-            android:theme="@style/AppTheme.Dark" />
+             />
         <activity
             android:name=".AboutActivity"
-            android:label="@string/app_name"
+            android:label="About"
             android:theme="@style/AppTheme.NoActionBar" >
         </activity>
         <activity
             android:name=".HelpActivity"
-            android:label="@string/app_name"
+            android:label="Help"
+            android:theme="@style/AppTheme.NoActionBar" >
+        </activity>
+        <activity
+            android:name=".ProfileEditActivity"
+            android:label="Change Profile"
+            android:theme="@style/AppTheme.NoActionBar" >
+        </activity>
+        <activity
+            android:name=".SettingActivity"
+            android:label="Settings"
+            android:theme="@style/AppTheme.NoActionBar" >
+        </activity>
+        <activity
+            android:name=".StampActivity"
+            android:label="Stamp"
+            android:theme="@style/AppTheme.NoActionBar" >
+        </activity>
+        <activity
+            android:name=".PointActivity"
+            android:label="Point"
+            android:theme="@style/AppTheme.NoActionBar" >
+        </activity>
+        <activity
+            android:name=".CouponActivity"
+            android:label="Coupon"
+            android:theme="@style/AppTheme.NoActionBar" >
+        </activity>
+        <activity
+            android:name=".ProfileActivity"
+            android:label="Profile"
             android:theme="@style/AppTheme.NoActionBar" >
         </activity>
     </application>
