efficient code in base activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,10 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".BaseActivity"
+             >
+        </activity>
+        <activity
             android:name=".LoginActivity"
              />
         <activity
