--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,10 @@ dependencies {
     compile 'com.android.support:design:23.0.1'
     compile 'com.jakewharton:butterknife:6.1.0'
     compile "org.apache.httpcomponents:httpmime:4.2.3"
+    compile 'com.google.zxing:core:3.1.0'
+    compile 'com.google.zxing:android-integration:3.1.0'
+    compile 'com.google.android.gms:play-services:8.1.0'
+    compile 'com.google.android.gms:play-services-identity:8.1.0'
+    compile 'com.google.android.gms:play-services-gcm:8.1.0'
+    compile 'com.ganyo:gcm-server:1.0.2'
 }
